[project]
name = "stocksenseai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-mongodb>=0.11.0",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.7",
    "motor>=3.7.1",
    "newsapi>=0.1.1",
    "newsapi-python>=0.2.7",
    "pymongo>=4.16.0",
    "tavily-python>=0.7.20",
    "utils>=1.0.2",
    "yahoofinance>=0.0.2",
    "yfinance>=1.1.0",
]
